--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="password_summary">.........</string>
     <string name="action_settings">Settings</string>
     <string name="logout">Log out</string>
+
+    <string name="url">http://192.168.100.24:8000/Studentlogin</string>
 </resources>
