--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,5 @@
     <string name="action_settings">Settings</string>
     <string name="logout">Log out</string>
 
-    <string name="url">http://192.168.100.24:8000/Studentlogin</string>
+    <string name="url">http://10.0.2.2:8000/logpage/Studentlogin/</string>
 </resources>
